# ProjectSirius

./: PRODUCT_REQUIREMENTS.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  chat.py  company.py
backend/app/models/: company.py
backend/app/services/: orchestrator.py  scraper.py
